@@ -12,6 +12,7 @@ depends:
     account_cog
 extras_depend:
     account_invoice
+    account_aggregate
 xml:
     icon.xml
     account.xml
