@@ -1,3 +1,4 @@
+* Aggregate payment moves per group key if available
 * UI enhancement on payment group list view (add amount and payment dates)
 * Add predefined motive on creation payment wizard
 
